# fleetman

./: .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml
.claude/: settings.local.json
.claude/skills/gitman/: SKILL.md
.scratch/projects/001-brainstorming/: CONCEPT.md
.scratch/projects/002-fleet-write-ops/: PLAN.md
.scratch/projects/003-repo-review-and-catch-up/: KICKOFF_PROMPT.md  OVERVIEW.md  PLAN.md
nix/: fleetman.nix
skills/fleetman/: SKILL.md
src/fleetman/: __init__.py  __main__.py  cli.py  core.py  doctor.py  init.py  models.py  render.py
tests/: test_core.py
